Adiciona redes sociais

--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Raul Magno</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <h1>Raul Magno</h1>
 <body>
-    <img src="raul.jpeg" alt="" width="100px">
+    <img id="img_redonda" src="raul.jpeg" alt="Foto estudando JS" width="200px">
     <p>Olá, me chamo <i>Raul Magno</i>, sou <strong>Mestre em Astrofísica pela PUC-RJ</strong>, e professor de física e matemática. Atualmente estudando desenvolvimento web na trybe.</p>
+    
+    <p id = "Principais-habilidades">
+        <strong>Habilidades das quais me orgulho</strong>
     <ul>
-        <li>Excelente aluno</li>
-        <li>Muito bom em exatas</li>
-        <li>Aprende rápido</li>
+        <li>Comunicativo</li>
+        <li>Curioso</li>
+        <li>Raciocínio rápido</li>
     </ul>
 
     <p>
-    <a href="raul.jpeg">Neste link você acessa minha foto de perfil</a>
+    <a href="https://www.linkedin.com/in/raul-magno-0b9075144/" target="_blank">Neste link você acessa meu perfil no Linkedin</a>
     </p>
 
     <p>
-    <a href="raul.jpeg" target="_blank"> Neste link você acessa minha foto de perfil</a>
+    <a href="https://www.instagram.com/raullmagno/" target="_blank"> Neste link você acessa perfil no Instagram</a>
     </p>
 </body>
 </html>
